[workspace]
resolver = "2"
members = ["example", "program", "sdk"]

[workspace.package]
authors = ["Blueshift <@blueshift_gg>"]
repository = "https://github.com/blueshift-gg/doppler"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
mollusk-svm = { version = "0.5.1" }
serde = { version = "1.0.219" }
solana-account = { version = "2.2.1" }
solana-client = { version = "2.2.3" }
solana-compute-budget-interface = { version = "2.2.2" }
solana-instruction = { version = "2.3.0" }
solana-keypair = { version = "2.2.3" }
solana-program = { version = "2.3.0" }
solana-pubkey = { version = "2.3.0" }
solana-signer = { version = "2.2.1" }
solana-transaction = { version = "2.2.3" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
