[package]
name = "doppler-example"
authors = ["Blueshift <@blueshift_gg>"]
version = "0.1.0"
edition = "2021"

[dependencies]
doppler = { path = "../program" }
doppler-sdk = { path = "../sdk" }
solana-client = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
