[package]
name = "doppler-program"
description = "An ultra-optimized oracle program for Solana."
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
doppler = { workspace = true }

[dev-dependencies]
doppler-sdk = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-clock = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-pubkey = { workspace = true }
solana-system-interface = { workspace = true, features = ["bincode"] }
mollusk-svm = { workspace = true }
mollusk-svm-bencher = { workspace = true }

[[bench]]
name = "compute_units"
harness = false
