[package]
name = "doppler-sdk"
description = "An ultra-optimized oracle SDK."
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
doppler = { path = "../program" }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
