[package]
name = "doppler-sdk"
description = "An ultra-optimized oracle SDK."
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
doppler-program = { workspace = true }
solana-account = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-transaction = { workspace = true }
