[package]
name = "doppler-sdk"
description = "An ultra-optimized oracle SDK."
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
solana-compute-budget-interface = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-keypair = { workspace = true }
solana-hash = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }

[dev-dependencies]
doppler-program = { workspace = true }
