[package]
name = "doppler-single-update-example"
description = "Example on how to update a single oracle."
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
doppler-program = { workspace = true }
doppler-sdk = { workspace = true }
solana-client = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }

[[bin]]
name = "price-feed"
path = "src/price_feed.rs"
